--- a/app/assets/stylesheets/application.postcss.css
+++ b/app/assets/stylesheets/application.postcss.css
@@ -1,6 +1,6 @@
-/* Entry point for your PostCSS build */
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss/base";
 
-@import "pagy_navigation.css";
+@import "tailwindcss/components";
+@import "./components/pagy.css";
+
+@import "tailwindcss/utilities";
