--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>DayIn</title>
+    <title><%= @page_title || "DayIn" %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -12,6 +12,7 @@
 
   <body>
     <%= render partial: "shared/flash" %>
+    <%= render partial: "shared/navbar" %>
     <%= yield %>
   </body>
 </html>
